# py-hexagonal

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  main.py  pyproject.toml  requirements-dev-patched.txt  requirements-dev.txt  requirements-patched.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
adapter/cache/: redis_cache.py
adapter/di/: container.py
adapter/dto/: __init__.py  example_dto.py
adapter/event/: handlers.py  memory_event_bus.py
adapter/http/: app_factory.py  error_handler.py  error_handlers.py  example_controller.py  flask_app.py  health_controller.py  middleware.py  middlewares.py
adapter/repository/: README.md  __init__.py  error.py  example_repo.py  factory.py  memory_example_repository.py  mysql.py  providers.py  redis.py  repository.py  transaction.py
api/: routes.py
api/middleware/: __init__.py
application/di/: container.py
application/event/: bus.py  events.py  example_event_handlers.py
application/service/: example.py  example_app_service.py  example_service.py
application/usecase/: base.py
cmd/: main.py
cmd/server/: app.py
config/: .env.example  config.py  config.yaml.example  settings.py
domain/aggregate/: __init__.py  aggregate.py
domain/event/: __init__.py  event.py  event_bus.py  example_events.py
domain/model/: entity.py  (+2 more)
entry/: main.py
examples/: db_example.py  di_basic_example.py  di_example.py  di_simple_test.py  postgre_example.py
tests/: test_example.py
util/: __init__.py  check_arch.py  env_checker.py  errors.py  logging.py  transaction.py
(+58 files in other folders)
